microservices-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ad
            pathType: Prefix
            backend:
              service:
                name: adservice
                port:
                  number: 9555
          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: cartservice
                port:
                  number: 7070
          - path: /checkout
            pathType: Prefix
            backend:
              service:
                name: checkoutservice
                port:
                  number: 5050
          - path: /currency
            pathType: Prefix
            backend:
              service:
                name: currencyservice
                port:
                  number: 7000
          - path: /email
            pathType: Prefix
            backend:
              service:
                name: emailservice
                port:
                  number: 5000
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: paymentservice
                port:
                  number: 50051
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: productcatalogservice
                port:
                  number: 3550
          - path: /recommendation
            pathType: Prefix
            backend:
              service:
                name: recommendationservice
                port:
                  number: 8080
          - path: /shipping
            pathType: Prefix
            backend:
              service:
                name: shippingservice
                port:
                  number: 50051
